Adding SeleniumUtils.java file

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -3,16 +3,16 @@ extent.reporter.spark.start=true
 extent.reporter.spark.out=test-output/SparkReport/Spark.html
 
 #PDF Report
-extent.reporter.pdf.start=true
-extent.reporter.pdf.out=test-output/PdfReport/ExtentPdf.pdf
+#extent.reporter.pdf.start=true
+#extent.reporter.pdf.out=test-output/PdfReport/ExtentPdf.pdf
 
 #HTML Report
 extent.reporter.html.start=true
 extent.reporter.html.out=test-output/HtmlReport/ExtentHtml.html
 
 #Excel Report
-extent.reporter.excel.start=true
-extent.reporter.excel.out=test-output/ExcelReport/ExtentExcel.xlsx
+#extent.reporter.excel.start=true
+#extent.reporter.excel.out=test-output/ExcelReport/ExtentExcel.xlsx
 
 ##FolderName
 basefolder.name=Report
